finished sync
